# mining-rights-daily-agent

./: .env.example  .gitignore  Dockerfile  README.md  RUN.md  docker-compose.yml  mcp-config.json  pyproject.toml
data/fixtures/: news.json  prices.json
examples/: pilbara_report.md  sample_ni43101.txt
src/mining_daily_agent/: __init__.py  agent.py  briefing.py  cache.py  common.py  http_client.py  news.py  pdf_resources.py  prices.py
src/mining_daily_agent/servers/: __init__.py  lme_price_mcp.py  mineral_pdf_mcp.py  mining_news_mcp.py
tests/: test_briefing.py  test_news.py  test_pdf_resources.py  test_prices.py
