[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mining-rights-daily-agent"
version = "0.1.0"
description = "MCP-based mining rights daily briefing agent."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "beautifulsoup4>=4.12.3",
  "feedparser>=6.0.11",
  "httpx>=0.27.0",
  "mcp>=1.9.0",
  "pydantic>=2.7.0",
  "pypdf>=4.2.0",
  "python-dateutil>=2.9.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.0",
  "ruff>=0.5.0",
]

[project.scripts]
mining-daily-agent = "mining_daily_agent.agent:main"
mining-news-mcp = "mining_daily_agent.servers.mining_news_mcp:main"
mineral-pdf-mcp = "mining_daily_agent.servers.mineral_pdf_mcp:main"
lme-price-mcp = "mining_daily_agent.servers.lme_price_mcp:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
mining_daily_agent = ["py.typed"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
